--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -14,4 +14,4 @@ on:
             - name: Pull in dev.to posts
             uses: gautamkrishnar/blog-post-workflow@master
             with:
-                feed_list: "https://dev.to/rs_marinheiro" # Troque pachicodes pelo seu usuário
+                feed_list: "https://dev.to/feed/rs_marinheiro" # Troque pachicodes pelo seu usuário
