--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -10,8 +10,10 @@ on:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-                uses: actions/checkout@v2
+                uses: actions/rafael
             - name: Pull in dev.to posts
                 uses: gautamkrishnar/blog-post-workflow@master
             with:
                 feed_list: "https://dev.to/feed/rs_marinheiro" # Troque pachicodes pelo seu usuário
+
+
