--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -10,9 +10,9 @@ on:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-                uses: actions/rafael
+                uses: actions/checkout@v2
             - name: Pull in dev.to posts
-                uses: gautamkrishnar/blog-post-workflow@master
+                uses: gautamkrishnar/blog-post-workflow@main
             with:
                 feed_list: "https://dev.to/feed/rs_marinheiro" # Troque pachicodes pelo seu usuário
 
