--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -12,8 +12,8 @@ on:
             - name: Checkout
             uses: actions/checkout@v2
             - name: Pull in dev.to posts
-            uses: gautamkrishnar/blog-post-workflow@main
+            uses: gautamkrishnar/blog-post-workflow@master
             with:
-                feed_list: "https://dev.to/feed/rs_marinheiro" # Troque pachicodes pelo seu usuário
+                feed_list: "https://dev.to/feed/rs_marinheiro" # Troque pachicodes pelo seu usuário.
 
 
