--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,19 +1,17 @@
-name: Meus Ultimos 5 #nome de sua escolha
+name: Meus Ultimos 5 Posts
 on:
-    schedule: # Roda fluxo de trabalho automaticamente
-    - cron: '0 * * * *' # Roda a cada uma hora
-    workflow_dispatch: # Roda fluxo de trabalho manualmente pelo Github Actions
+  schedule: # Run workflow automatically
+    - cron: '0 * * * *' # Runs every hour, on the hour
+  workflow_dispatch: # Run workflow manually (without waiting for the cron to be called), through the Github Actions Workflow page directly
 
-    jobs:
-        update-readme-with-blog:
-        name: Update this repo's README with latest blog posts
-        runs-on: ubuntu-latest
-        steps :
-            - name: Checkout
-            uses: actions/checkout@v2
-            - name: Pull in dev.to posts
-            uses: gautamkrishnar/blog-post-workflow@master
-            with:
-                feed_list: "https://dev.to/feed/rs_marinheiro" # Troque pachicodes pelo seu usuário.
-
-
+jobs:
+  update-readme-with-blog:
+    name: Update this repo's README with latest blog posts
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Pull in dev.to posts
+        uses: gautamkrishnar/blog-post-workflow@master
+        with:
+          feed_list: "https://dev.to/feed/rs_marinheiro"
